# sudoku

./: .releaserc.js  package.json
.github/workflows/: main.yml
src/: App.vue  main.ts  shims-vuex.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Cell.vue  Menu.vue  Sudoku.vue
src/store/: getters.ts  index.ts  mutations.ts  state.ts  sudokuHelpers.ts
