[package]
name = "sudoku"
version = "0.1.0"
description = "A Tauri App"
authors = [ "oplik0" ]
license = ""
repository = ""
default-run = "sudoku"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "sudoku"
path = "src/main.rs"
